# StudyGen

./: .gitignore  README.md  pyproject.toml
src/: app.py  rag.py
