[project]
name = "studygen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-ollama>=0.3.3",
    "pandas>=2.2.3",
    "streamlit>=1.45.1",
    "protobuf==3.20.3",
    "pypdf>=5.5.0",
    "bs4>=0.0.2",
    "youtube-transcript-api>=1.0.3",
    "pytube>=15.0.0",
    "yt-dlp>=2025.4.30",
]
